pkglib_LTLIBRARIES = libncl.la
libncl_ladir = $(includedir)/ncl
libncl_la_LDFLAGS = -release @PACKAGE_VERSION@


libncl_la_HEADERS = \
	ncl.h \
	nxsallocatematrix.h \
	nxsassumptionsblock.h \
	nxsblock.cpp \
	nxsblock.h \
	nxscharactersblock.h \
	nxscdiscretematrix.h \
	nxscxxdiscretematrix.h \
	nxsdatablock.h \
	nxsdefs.h \
	nxsdiscretedatum.h \
	nxsdistancedatum.h \
	nxsdistancesblock.h \
	nxsexception.h \
	nxsmultiformat.h \
	nxspublicblocks.h \
	nxsreader.h \
	nxssetreader.h \
	nxsstring.h \
	nxstaxablock.h \
	nxstoken.h \
	nxstreesblock.h \
	nxsunalignedblock.h \
	nxsutilcopy.h

libncl_la_SOURCES = \
	nxsassumptionsblock.cpp \
	nxsblock.cpp \
	nxscharactersblock.cpp \
	nxscxxdiscretematrix.cpp \
	nxsdatablock.cpp \
	nxsdistancedatum.cpp \
	nxsdistancesblock.cpp \
	nxsexception.cpp \
	nxsmultiformat.cpp \
	nxspublicblocks.cpp \
	nxsreader.cpp \
	nxssetreader.cpp \
	nxsstring.cpp \
	nxstaxablock.cpp \
	nxstoken.cpp \
	nxstreesblock.cpp \
	nxsunalignedblock.cpp

EXTRA_DIST = nxsemptyblock.h nxsemptyblock.cpp
